<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.harun.android.cashtrack.fragments.AddVehicleFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/material_left_right_top_bottom"
            android:paddingLeft="@dimen/material_left_right_top_bottom"
            android:paddingRight="@dimen/material_left_right_top_bottom"
            android:paddingTop="@dimen/material_left_right_top_bottom">

            <LinearLayout
                android:id="@+id/vehicleReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewReg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/vehicle_reg"
                    android:textAppearance="?android:textAppearanceMedium" />

                <EditText
                    android:id="@+id/vehicle_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/vehicle_reg_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textNoSuggestions"
                    android:textAppearance="?android:textAppearanceSmall" />

                <EditText
                    android:id="@+id/vehicle_input_end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:freezesText="true"
                    android:hint="@string/vehicle_reg_hint_end"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textAppearance="?android:textAppearanceSmall" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/vehicleMake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/material_left_right_top_bottom">

                <TextView
                    android:id="@+id/textViewMake"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vehicle_make"
                    android:textAppearance="?android:textAppearanceMedium" />

                <EditText
                    android:id="@+id/vehicle_make_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/vehicle_make_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textNoSuggestions"
                    android:textAppearance="?android:textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vehicleModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/material_left_right_top_bottom">

                <TextView
                    android:id="@+id/textViewModel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vehicle_model"
                    android:textAppearance="?android:textAppearanceMedium" />

                <EditText
                    android:id="@+id/vehicle_model_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/vehicle_model_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textNoSuggestions"
                    android:textAppearance="?android:textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/manufactureYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/material_left_right_top_bottom">

                <TextView
                    android:id="@+id/textViewManYear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vehicle_man_year"
                    android:textAppearance="?android:textAppearanceMedium" />

                <EditText
                    android:id="@+id/vehicle_man_year_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/vehicle_year_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textNoSuggestions"
                    android:textAppearance="?android:textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/passengerCap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/material_left_right_top_bottom">

                <TextView
                    android:id="@+id/textViewPassengers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_pass_cap"
                    android:textAppearance="?android:textAppearanceMedium" />

                <EditText
                    android:id="@+id/passenger_cap_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/passengers_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textNoSuggestions"
                    android:textAppearance="?android:textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/create_vehicle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/create_vehicle_button_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </android.support.constraint.ConstraintLayout>

</layout>
